--- a/styles.css
+++ b/styles.css
@@ -3,18 +3,113 @@ body{
     height: 100vh;
 }
 
-.selection{
-    display: flex;
-    justify-content: space-evenly;
-    
-    background-color: red;
-    width: 100%;
-    height: 50%;
-}
+/* TOP PART */
 
 .result{
     background-color: blue;
     width: 100%;
-    height: 50%;
+    height: 30%;
 }
 
+.counter{
+    display: flex;
+    background-color: yellow;
+    width: 100%;
+    height: 60%;
+}
+
+.counter > .player{
+    background-color: white;
+    width: 50%;
+    height: 100%;
+}
+
+.counter > .computer{
+    background-color: rgb(153, 82, 82);
+    width: 50%;
+    height: 100%;
+}
+
+.player, .computer{
+    font-family: 'Odibee Sans', cursive;
+    font-size: 3em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* MIDDLE PART */
+
+.game{
+    background-color: white;
+    width: 100%;
+    height: 60%;
+}
+
+.game-counter{
+    background-color: aquamarine;
+    width: 100%;
+    height: 15%;
+}
+
+.game-counter{
+    font-family: 'Odibee Sans', cursive;
+    font-size: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.play-field{
+    display: flex;
+    background-color: blueviolet;
+    width: 100%;
+    height: 85%;
+}
+
+.play-field > .buttons{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: orange;
+    width: 45%;
+    height: 100%;
+}
+
+.select-button > img{
+    width: 75px;
+    height: 75px;
+}
+
+.play-field > .battle{
+    background-color: pink;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:  10%;
+    height: 100%;
+}
+
+.battle > span{
+    font-family: 'Oswald', sans-serif;
+    font-size: 2.5em;
+}
+
+.play-field > .computer-choose{
+    background-color: bisque;
+    width: 45%;
+    height: 100%;
+}
+
+/* DOWN PART */
+
+.footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: gray;
+    width: 100%;
+    height: 10%;
+}
